removed default agricraft plants & soil and added wasteland soil & wilted lily crop

--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "block.gtceu.downhole_heat_exchanger": "Downhole heat exchanger",
-    "gtceu.downhole_heat_exchanger": "Downhole heat exchanger"
+    "gtceu.downhole_heat_exchanger": "Downhole heat exchanger",
+    "soil.agricraft.bloom_arti.wasteland_soil": "Polluted wasteland soil"
 }
