added more soils and tweaked previous soils

--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -6,6 +6,12 @@
     "soil.agricraft.bloom_arti.red_sand": "Red sand",
     "soil.agricraft.bloom_arti.orange_sand": "Orange sand",
     "soil.agricraft.bloom_arti.desert_sand": "Desert sand",
+    "soil.agricraft.bloom_arti.lush_red_sand": "Lush red sand",
+    "soil.agricraft.bloom_arti.wet_red_sand": "Wet red sand",
+    "soil.agricraft.bloom_arti.sandy_dirt": "Sandy dirt",
+    "soil.agricraft.bloom_arti.gravel": "Gravel",
+    "soil.agricraft.bloom_arti.white_sand": "White sand",
+    "soil.agricraft.bloom_arti.clay": "Clay",
     "plant.agricraft.bloom_arti.desert_grass": "Desert grass",
     "seed.agricraft.bloom_arti.desert_grass": "Desert grass Seed",
     "description.agricraft.bloom_arti.desert_grass": "Grass that survives even in the harshest conditions."
