--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -2,16 +2,16 @@
     "block.gtceu.downhole_heat_exchanger": "Downhole heat exchanger",
     "gtceu.downhole_heat_exchanger": "Downhole heat exchanger",
     "soil.agricraft.bloom_arti.wasteland_soil": "Polluted wasteland soil",
-    "soil.agricraft.bloom_arti.sand": "Sand",
-    "soil.agricraft.bloom_arti.red_sand": "Red sand",
-    "soil.agricraft.bloom_arti.orange_sand": "Orange sand",
-    "soil.agricraft.bloom_arti.desert_sand": "Desert sand",
-    "soil.agricraft.bloom_arti.lush_red_sand": "Lush red sand",
-    "soil.agricraft.bloom_arti.wet_red_sand": "Wet red sand",
-    "soil.agricraft.bloom_arti.sandy_dirt": "Sandy dirt",
-    "soil.agricraft.bloom_arti.gravel": "Gravel",
-    "soil.agricraft.bloom_arti.white_sand": "White sand",
-    "soil.agricraft.bloom_arti.clay": "Clay",
+    "soil.agricraft.bloom_arti.sand": "Poor sandy soil",
+    "soil.agricraft.bloom_arti.red_sand": "Poor sandy soil",
+    "soil.agricraft.bloom_arti.orange_sand": "Sterile sandy soil",
+    "soil.agricraft.bloom_arti.desert_sand": "Poor sandy soil",
+    "soil.agricraft.bloom_arti.lush_red_sand": "Poor silty soil",
+    "soil.agricraft.bloom_arti.wet_red_sand": "Poor silty soil",
+    "soil.agricraft.bloom_arti.sandy_dirt": "Deficient silty soil",
+    "soil.agricraft.bloom_arti.white_sand": "Poor sandy soil",
+    "soil.agricraft.bloom_arti.clay": "Poor clay-soil",
+    "soil.agricraft.bloom_arti.coarse_sand": "Deficient sandy soil",
     "plant.agricraft.bloom_arti.desert_grass": "Desert grass",
     "seed.agricraft.bloom_arti.desert_grass": "Desert grass Seed",
     "description.agricraft.bloom_arti.desert_grass": "Grass that survives even in the harshest conditions."
