added amaranth, flax and tweaked some crop-values

--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -1,7 +1,7 @@
 {
     "block.gtceu.downhole_heat_exchanger": "Downhole heat exchanger",
     "gtceu.downhole_heat_exchanger": "Downhole heat exchanger",
-    "soil.agricraft.bloom_arti.wasteland_soil": "Polluted wasteland soil",
+    "soil.agricraft.bloom_arti.wasteland_soil": "Polluted sandy soil",
     "soil.agricraft.bloom_arti.sand": "Poor sandy soil",
     "soil.agricraft.bloom_arti.red_sand": "Poor sandy soil",
     "soil.agricraft.bloom_arti.orange_sand": "Sterile sandy soil",
